unpackaged/main/default/objects/QS_Requirements__c/fields/Business_Test_Scenarios_Done__c.field-meta.xml
<CustomField>
    <fullName>Business_Test_Scenarios_Done__c</fullName>
    <label>Business Test Scenarios Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>