unpackaged/main/default/objects/QS_Requirements__c/fields/Business_Tests_Done__c.field-meta.xml
<CustomField>
    <fullName>Business_Tests_Done__c</fullName>
    <label>Business Tests Complete</label>
    <summaryFilterItems>
        <field>QS_Test_Scenario__c.Testing_Group__c</field>
        <operation>contains</operation>
        <value>Business - All, Business - Detail</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QS_Test_Scenario__c.QS_Status__c</field>
        <operation>notEqual</operation>
        <value>Not Tested</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Test_Scenario__c.QS_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>