unpackaged/main/default/objects/QS_Requirements__c/fields/Candidate_to_Simplify_Postpone_Withdraw__c.field-meta.xml
<CustomField>
    <fullName>Candidate_to_Simplify_Postpone_Withdraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate to Simplify/Postpone/Withdraw</label>
    <type>Checkbox</type>
</CustomField>