unpackaged/main/default/objects/QS_Requirements__c/fields/Complexity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Comments__c</fullName>
    <label>Complexity Comments</label>
    <type>TextArea</type>
</CustomField>