unpackaged/main/default/objects/QS_Requirements__c/fields/Complexity_Impacts_LOE__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Impacts_LOE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The entire REQ--or only details of the REQ--impact LOE.</inlineHelpText>
    <label>Complexity Impacts LOE</label>
    <type>Checkbox</type>
</CustomField>