unpackaged/main/default/objects/QS_Requirements__c/fields/Core_VBP_Document__c.field-meta.xml
<CustomField>
    <fullName>Core_VBP_Document__c</fullName>
    <inlineHelpText>Indicates which VBP document pertains to this requirement.</inlineHelpText>
    <label>Core VBP Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F&amp;A: Customer Contract Database</fullName>
            </value>
            <value>
                <fullName>F&amp;A: Contract Excellence &amp; Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>F&amp;A: Renewals &amp; Revenue Sweep</fullName>
            </value>
            <value>
                <fullName>F&amp;A: Deal Desk</fullName>
            </value>
            <value>
                <fullName>GTM:_CAPDB_Customer_and_Prospect_Database</fullName>
                <label>GTM: CAPDB (Customer and Prospect Database)</label>
            </value>
            <value>
                <fullName>GTM: Sales Compensation Plan</fullName>
            </value>
            <value>
                <fullName>GTM: Territory Mapping &amp; Coverage</fullName>
            </value>
            <value>
                <fullName>GTM: Vista Value Selling System</fullName>
            </value>
            <value>
                <fullName>GTM: Customer Health &amp; Heal Desk</fullName>
            </value>
            <value>
                <fullName>GTM: Sales Forecasting Process</fullName>
            </value>
            <value>
                <fullName>GTM: Win-Loss Reporting Process</fullName>
            </value>
            <value>
                <fullName>BOSS: BOSS Transformation</fullName>
            </value>
            <value>
                <fullName>GTM: Lead Management</fullName>
            </value>
            <value>
                <fullName>GTM: Lead Development</fullName>
            </value>
            <value>
                <fullName>GTM: Lead Nurturing</fullName>
            </value>
            <value>
                <fullName>GTM: Customer Experience Management Using Net Promoter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>