unpackaged/main/default/objects/QS_Requirements__c/fields/CPQ_Approach_Impact__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Approach_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPQ Approach Impact</label>
    <type>Checkbox</type>
</CustomField>