unpackaged/main/default/objects/QS_Requirements__c/fields/Design_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Status__c</fullName>
    <label>Design Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Details Needed - Cannot Build</fullName>
                <default>true</default>
                <label>Details Needed - Cannot Build</label>
            </value>
            <value>
                <fullName>Key Elements Known - Can Build &amp; Iterate</fullName>
            </value>
            <value>
                <fullName>All Details Known - Can Build</fullName>
            </value>
            <value>
                <fullName>Blocked - Encountered Complexity/Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>