unpackaged/main/default/objects/QS_Requirements__c/fields/Initial_Review_with_Business__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_with_Business__c</fullName>
    <label>Initial Review with Business</label>
    <type>Date</type>
</CustomField>