unpackaged/main/default/objects/QS_Requirements__c/fields/Meeting_Category__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Category__c</fullName>
    <label>Meeting Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPSA, Opportunity, Quote</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Service Handoff</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Amendments/Decommissions</fullName>
            </value>
            <value>
                <fullName>Contract Renewals</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>