unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Area__c.field-meta.xml
<CustomField>
    <fullName>QS_Area__c</fullName>
    <inlineHelpText>System/functional area within the track to which the requirement applies.</inlineHelpText>
    <label>System Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Health Management</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Activity Management</fullName>
            </value>
            <value>
                <fullName>Analytics Management (Reporting &amp; Supporting REQs)</fullName>
            </value>
            <value>
                <fullName>Bookings Management</fullName>
            </value>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>Collaboration Management</fullName>
            </value>
            <value>
                <fullName>Community/Portal Management (Customer/Partner)</fullName>
            </value>
            <value>
                <fullName>Contact Management</fullName>
            </value>
            <value>
                <fullName>Contact Role Management (Account &amp; Oppty)</fullName>
            </value>
            <value>
                <fullName>Content Management and/or Knowledge</fullName>
            </value>
            <value>
                <fullName>Purchased Products/Subscription Management</fullName>
            </value>
            <value>
                <fullName>Customer Entitlement &amp; SLA Management</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Data Quality Management</fullName>
            </value>
            <value>
                <fullName>Finance - ZAB</fullName>
            </value>
            <value>
                <fullName>Finance - Collections/Payment Management</fullName>
            </value>
            <value>
                <fullName>Finance - ERP Account Management</fullName>
            </value>
            <value>
                <fullName>Finance - ERP Asset Management</fullName>
            </value>
            <value>
                <fullName>Finance - ERP Product Management</fullName>
            </value>
            <value>
                <fullName>Finance - ERP Project/Expense Management</fullName>
            </value>
            <value>
                <fullName>Finance - Record to Report</fullName>
            </value>
            <value>
                <fullName>Finance - NetSuite</fullName>
            </value>
            <value>
                <fullName>Finance - Revenue Management</fullName>
            </value>
            <value>
                <fullName>Finance - Other ERP</fullName>
            </value>
            <value>
                <fullName>Finance - Vendor Management</fullName>
            </value>
            <value>
                <fullName>Idea Management</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Master Agreement Contract Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>