unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>QS_Assumptions__c</fullName>
    <description>HTML field that allows user to put dependencies of the requirement and capture what is needed outside of the requirement details in order to implement the requirement successfully</description>
    <inlineHelpText>Field to capture key information related to the REQ such as system limitations, prerequisite permissions/configurations, process decisions, and/or agreed to conditions such as &quot;REQ will be accomplished using native configuration capability vs. code.“</inlineHelpText>
    <label>Assumptions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>