unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Build_Complexity__c.field-meta.xml
<CustomField>
    <fullName>QS_Build_Complexity__c</fullName>
    <description>Describes the complexity of the requirement and estimated time to build the requirement fully out</description>
    <inlineHelpText>High = 4-5 person Weeks Med = 2-3 person Weeks Low = 1-2 person Weeks</inlineHelpText>
    <label>Build Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>