unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Build_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Build_Status__c</fullName>
    <description>None - there is nothing in QS to meet this REQ. 
Partially Built - there is some functionality in QS that meets this REQ. This should be detailed in the Proposed Solution. 
Fully Built - this REQ is fully enabled by QS functionality. This should be detailed in the Proposed Solution. Tweaks or customizations likely still required.</description>
    <inlineHelpText>None - nothing in QS to meet this REQ. 
Partially Built - some functionality in QS that meets this REQ. Should be detailed in Proposed Solution. 
Fully Built - this REQ is fully enabled by QS functionality. Should be detailed in Proposed Solution</inlineHelpText>
    <label>QS Build Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Partially Built</fullName>
            </value>
            <value>
                <fullName>Fully Built</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>