unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The primary owner pushing for this requirement.</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>