unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Change_Context_Benefit__c.field-meta.xml
<CustomField>
    <fullName>QS_Change_Context_Benefit__c</fullName>
    <description>Text area to call out changes to existing processes and put justifications for any changes this requirement will add</description>
    <inlineHelpText>OPTIONAL: Update this field to include additional context and benefits to the changes. Can be used to flesh out the business justification or impact to current state when there&#39;s a more contentious change. Includes the &quot;what&#39;s in it for me?&quot; language.</inlineHelpText>
    <label>Change Context + Benefit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>