unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Cross_Functional_Requirement__c.field-meta.xml
<CustomField>
    <fullName>QS_Cross_Functional_Requirement__c</fullName>
    <description>Denotes that the requirement has related requirements linked to it. Total Related Requirements &gt;0</description>
    <formula>QS_Total_Related_Tracks__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes that the requirement has related requirements linked to it.</inlineHelpText>
    <label>Cross Functional Requirement</label>
    <type>Checkbox</type>
</CustomField>