unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Developer_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Developer_Notes_Comments__c</fullName>
    <label>Developer Notes/Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>