unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person responsible for building the requirement out in the system</inlineHelpText>
    <label>Development Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>