unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Development_Sprint__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Sprint__c</fullName>
    <description>Picklist for which development sprint this requirement should be fully developed by.</description>
    <inlineHelpText>Estimation of when the requirement will be delivered for testing.</inlineHelpText>
    <label>Development Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test Cycle 1</fullName>
            </value>
            <value>
                <fullName>Test Cycle 2</fullName>
            </value>
            <value>
                <fullName>Test Cycle 3</fullName>
            </value>
            <value>
                <fullName>Test Cycle 4</fullName>
            </value>
            <value>
                <fullName>End To End Testing</fullName>
            </value>
            <value>
                <fullName>Finance Invoice Testing</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Sprint 0</fullName>
            </value>
            <value>
                <fullName>Sprint 1</fullName>
            </value>
            <value>
                <fullName>Sprint 2</fullName>
            </value>
            <value>
                <fullName>Sprint 3</fullName>
            </value>
            <value>
                <fullName>Sprint 4</fullName>
            </value>
            <value>
                <fullName>Sprint 5</fullName>
            </value>
            <value>
                <fullName>Sprint 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>