unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Development_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Status__c</fullName>
    <description>Picklist showing the status of the current deployment, allowing for reporting into what requirement are built, are in progress, and are still open</description>
    <inlineHelpText>Describes where in the process the development owner is in designing/building out the requirement.</inlineHelpText>
    <label>Development Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Dev In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for QA/Dev Complete</fullName>
            </value>
            <value>
                <fullName>Ready for User Testing</fullName>
            </value>
            <value>
                <fullName>Closed/Implemented</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>