unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Development_Team__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Team__c</fullName>
    <description>Need to rename Partner 1/2 to implementation partners being used by portfolio companies</description>
    <inlineHelpText>Defines which team is responsible for ensuring implementation of the requirement</inlineHelpText>
    <label>Development Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QS_Development_Team</valueSetName>
    </valueSet>
</CustomField>