unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Development_Type__c.field-meta.xml
<CustomField>
    <fullName>QS_Development_Type__c</fullName>
    <inlineHelpText>Examples include:
Basic Config - Picklists, layouts, quick formulas 
Advanced Config -  Workflow rules, validation rules, complex formulas
Code - apex classes, apex triggers
Data - account/product hierarchies, assets
Installation - of Appexchange</inlineHelpText>
    <label>Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic Configuration</fullName>
            </value>
            <value>
                <fullName>Advanced Configuration</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>