unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Dynamic_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Dynamic_Date__c</fullName>
    <label>Dynamic Date</label>
    <type>DateTime</type>
</CustomField>