unpackaged/main/default/objects/QS_Requirements__c/fields/QS_E2E_Account__c.field-meta.xml
<CustomField>
    <fullName>QS_E2E_Account__c</fullName>
    <description>Used to denote the Account being tested for the given E2E requirement</description>
    <inlineHelpText>Used to denote the Account being tested for the given E2E requirement</inlineHelpText>
    <label>E2E Account</label>
    <type>Url</type>
</CustomField>