unpackaged/main/default/objects/QS_Requirements__c/fields/QS_External_Impact__c.field-meta.xml
<CustomField>
    <fullName>QS_External_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box indicates that a group outside of your company [like partners or customers] will be impacted by this change directly and require a communication or training.</description>
    <inlineHelpText>Checking this box indicates that a group outside of your company [like partners or customers] will be impacted by this change directly and require a communication or training.</inlineHelpText>
    <label>External Impact?</label>
    <type>Checkbox</type>
</CustomField>