unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Has_Been_Tested__c.field-meta.xml
<CustomField>
    <fullName>QS_Has_Been_Tested__c</fullName>
    <formula>OR( QS_Failed_Test_Scenarios__c &lt;&gt; 0, 
QS_Passed_Test_Scenarios__c &lt;&gt; 0 )</formula>
    <label>Has Been Tested</label>
    <type>Checkbox</type>
</CustomField>