unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Has_Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>QS_Has_Test_Scenario__c</fullName>
    <formula>QS_Test_Scenarios__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Test Scenario</label>
    <type>Checkbox</type>
</CustomField>