unpackaged/main/default/objects/QS_Requirements__c/fields/QS_I_am_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>QS_I_am_Business_Owner__c</fullName>
    <description>Used to denote if the logged in user is the business owner of a Requirement</description>
    <formula>$User.Id = QS_Business_Owner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to denote if the logged in user is the business owner of a Requirement</inlineHelpText>
    <label>I am Business Owner</label>
    <type>Checkbox</type>
</CustomField>