unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Impact_to_Current_State__c.field-meta.xml
<CustomField>
    <fullName>QS_Impact_to_Current_State__c</fullName>
    <description>Describe how this requirement differs from the existing systems, process, etc. Be sure to include how this impacts the end users of the systems + process -- where they might need additional skills or behaviors to complete, or have strongly held beliefs.</description>
    <inlineHelpText>Describe how this requirement differs from the existing systems, process, etc. Be sure to include how this impacts the end users of the systems + process -- where they might need additional skills or behaviors to complete, or have strongly held beliefs.</inlineHelpText>
    <label>Impact to Current State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>