unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Impacted_Audience__c.field-meta.xml
<CustomField>
    <fullName>QS_Impacted_Audience__c</fullName>
    <description>Captures which business teams will be impacted by this requirement and who will need change management for this requirement</description>
    <inlineHelpText>Choose all business units who will be impacted by the upstream or downstream effects of this requirement. This will help </inlineHelpText>
    <label>Impacted Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Success Education</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>All System users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>