unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Level_of_Change_Impact__c.field-meta.xml
<CustomField>
    <fullName>QS_Level_of_Change_Impact__c</fullName>
    <description>Mark the level of impact of this change. Used to evaluate the change management response plan for this Req. Choose High for more contentious or larger changes that may require their own response plan, choose Low for small changes.</description>
    <inlineHelpText>Mark the level of impact of this change. Used to evaluate the change management response plan for this Req. Choose High for more contentious or larger changes that may require their own response plan, choose Low for small changes.</inlineHelpText>
    <label>Level of Change Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>