unpackaged/main/default/objects/QS_Requirements__c/fields/QS_LOE__c.field-meta.xml
<CustomField>
    <fullName>QS_LOE__c</fullName>
    <label>LOE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>