unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>QS_Opportunity__c</fullName>
    <description>Used to denote the Opportunity being tested for this E2E requirement</description>
    <inlineHelpText>Used to denote the Opportunity being tested for this E2E requirement</inlineHelpText>
    <label>Opportunity</label>
    <type>Url</type>
</CustomField>