unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Origin__c.field-meta.xml
<CustomField>
    <fullName>QS_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Standard - Best practice requirement
Portfolio - Requirement unique to the company outside standard requirements that describe the needs and goals of the business</inlineHelpText>
    <label>Standard</label>
    <type>Checkbox</type>
</CustomField>