unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Overall_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>QS_Overall_Sort_Order__c</fullName>
    <formula>IF(QS_User_Story__r.QS_Sort_Order__c &lt; 100,      IF(QS_User_Story__r.QS_Sort_Order__c &lt; 10,          &quot;00&quot; &amp; TEXT(QS_User_Story__r.QS_Sort_Order__c),          &quot;0&quot; &amp; TEXT(QS_User_Story__r.QS_Sort_Order__c)         ),      TEXT(QS_User_Story__r.QS_Sort_Order__c)     )   &amp; &quot;-&quot; &amp;   IF(QS_SortOrder__c &lt; 100,      IF(QS_SortOrder__c &lt; 10,          &quot;00&quot; &amp; TEXT(QS_SortOrder__c),          &quot;0&quot; &amp; TEXT(QS_SortOrder__c)         ),      TEXT(QS_SortOrder__c)     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Sort Order</label>
    <type>Text</type>
</CustomField>