unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Passed_Test_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>QS_Passed_Test_Scenarios__c</fullName>
    <label># Passed Test Scenarios</label>
    <summaryFilterItems>
        <field>QS_Test_Scenario__c.QS_Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>QS_Test_Scenario__c.QS_Requirement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>