unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Primary_Track__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Track</label>
    <referenceTo>QS_Track__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>