unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Primary_Track_External_Id__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Track_External_Id__c</fullName>
    <formula>QS_Primary_Track__r.QS_Track_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Track External id</label>
    <type>Text</type>
</CustomField>