unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Primary_Track_Formula__c.field-meta.xml
<CustomField>
    <fullName>QS_Primary_Track_Formula__c</fullName>
    <description>Used in conditional display of fields</description>
    <formula>QS_Primary_Track__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Track (Formula)</label>
    <type>Text</type>
</CustomField>