unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Priority__c.field-meta.xml
<CustomField>
    <fullName>QS_Priority__c</fullName>
    <inlineHelpText>How significant is this requirement to business functionality for Go-Live</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>