unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Process_Context__c.field-meta.xml
<CustomField>
    <fullName>QS_Process_Context__c</fullName>
    <description>Description of the value this requirement brings to the organization and why this is being implemented for the business.</description>
    <inlineHelpText>Description of the value this requirement brings to the organization and why this is being implemented for the business.</inlineHelpText>
    <label>Business Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>