unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Product__c.field-meta.xml
<CustomField>
    <fullName>QS_Product__c</fullName>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customizable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>