unpackaged/main/default/objects/QS_Requirements__c/fields/QS_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>QS_Proposed_Solution__c</fullName>
    <inlineHelpText>The steps and tasks the Development Owner recommends to implement the requirement.</inlineHelpText>
    <label>Proposed Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>